cosmetics(VideoGrid): fix issue with overflow x

--- a/src/app/components/video-grid/video-grid.component.scss
+++ b/src/app/components/video-grid/video-grid.component.scss
@@ -9,7 +9,6 @@
   .videos-render {
     @include row-left;
     max-width: $video-grid-max-width;
-    overflow-x: hidden;
     flex-wrap: wrap;
 
     app-video-item {
